# installguard

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  whitepaper.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/installguard/: README.md  action.yml
.github/workflows/: ci.yml  notify-site-rebuild.yml  release.yml
ci/gitlab/: installguard.gitlab-ci.yml
crates/adapters/npm/: Cargo.toml
crates/adapters/npm/src/: lib.rs
crates/adapters/pnpm/: Cargo.toml
crates/adapters/pnpm/src/: lib.rs
crates/adapters/pypi/: Cargo.toml
crates/adapters/pypi/src/: lib.rs
crates/adapters/yarn/: Cargo.toml
crates/adapters/yarn/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  progress.rs
crates/core/: Cargo.toml
crates/core/examples/: minimal_provider.rs
crates/core/src/: adapter.rs  attestation.rs  audit.rs  composite.rs  decision.rs  dependency.rs  dsse.rs  lib.rs  lockfile.rs  name_similarity.rs  policy.rs  sbom.rs  script_scan.rs  signal.rs  trust_score.rs  vex.rs
crates/core/tests/: policy_schema.rs
crates/signals/depsdev/: Cargo.toml
crates/signals/depsdev/src/: lib.rs
crates/signals/npm-registry/: Cargo.toml
crates/signals/npm-registry/src/: lib.rs
crates/signals/osv/: Cargo.toml
crates/signals/osv/src/: lib.rs
crates/signals/pypi-registry/: Cargo.toml
crates/signals/pypi-registry/src/: lib.rs
crates/signals/pypi-sdist/: Cargo.toml
crates/signals/pypi-sdist/src/: lib.rs  python_patterns.rs
crates/signals/scorecard/: Cargo.toml
crates/signals/scorecard/src/: lib.rs
examples/hooks/: pre-commit.sh
examples/policies/: baseline.yaml
examples/workflows/: installguard-bot-prs.yml  installguard.yml
packaging/homebrew/: README.md  installguard.rb
schemas/: installguard-policy.schema.json
