[package]
name = "installguard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Policy gate for npm/pnpm/yarn installs: blocks risky dependencies (advisories, low scorecard, brand-new releases, suspicious lifecycle scripts) from CI and dev machines."

[lints]
workspace = true

[[bin]]
name = "installguard"
path = "src/main.rs"

[dependencies]
installguard-core = { workspace = true }
installguard-adapter-npm = { workspace = true }
installguard-adapter-pnpm = { workspace = true }
installguard-adapter-yarn = { workspace = true }
installguard-signal-npm-registry = { workspace = true }
installguard-signal-osv = { workspace = true }
installguard-signal-depsdev = { workspace = true }
installguard-signal-scorecard = { workspace = true }
installguard-cache = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
dirs = "6.0"
