[package]
name = "installguard-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and policy engine for InstallGuard."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
schemars = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
