[package]
name = "installguard-adapter-pnpm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "pnpm-lock.yaml adapter for InstallGuard."

[lints]
workspace = true

[dependencies]
installguard-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
