[package]
name = "installguard-adapter-pypi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PyPI adapter (uv.lock + pip-compile requirements.txt) for InstallGuard."

[lints]
workspace = true

[dependencies]
installguard-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
