[package]
name = "installguard-adapter-yarn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Yarn Berry (yarn.lock) adapter for InstallGuard."

[lints]
workspace = true

[dependencies]
installguard-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
