[package]
name = "installguard-signal-npm-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "npm registry signal provider for InstallGuard."

[lints]
workspace = true

[dependencies]
installguard-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
